# MegaRay

./: .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY.md  filters.cfg
filters/newpixie/: LICENSE  accumulate.fs  blur_h.fs  blur_v.fs  newpixie_crt.fs
src/: main.c
src/core/: core_internal.h  io.c  md.c  md.h  psg.c  vdp.c  z80bus.c
src/frontend/: video_filter.c  video_filter.h
